Fixing design on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,6 @@ header {
   align-items: center;
 }
 main {
-  /* padding: 5px 5x; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -49,13 +48,14 @@ main {
   flex-direction: column;
 }
 .input-container .input-form {
-  width: max(50%, 379px);
+  font-family: "Space Mono";
+  width: 379px;
   height: 48px;
   background-color: var(--Very-light-grayish-cyan);
   border: none;
   text-align: right;
   padding: 0 10px 0 0;
-  color:var(--Grayish-cyan);
+  color:var(--Very-dark-cyan);
   font-weight: 700;
   font-size: 16px;
 }
@@ -77,6 +77,7 @@ input[type="number"]::-webkit-inner-spin-button {
     margin: 0;
 }
 #custom-input {
+  font-family: "Space Mono";
   font-size: 24px;
   border: none;
   width: 117px;
@@ -113,7 +114,7 @@ input[type="number"]::-webkit-inner-spin-button {
   flex-direction: column;
   justify-content: space-around;
   padding: 5px 30px;
-  width: min(70%, 413px);
+  width: min(90%, 413px);
   height: 417px;
   background-color: var(--Very-dark-cyan);
   border-radius: 20px;
@@ -160,6 +161,15 @@ button {
   main{
     height: 100%;
   }
+  .placeholder{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    min-width: 80%;
+  }
+  .input-container{
+     width: 90%;
+  }
   .percentage-buttons {
     display: grid;
     gap: 20px;
@@ -167,5 +177,8 @@ button {
   }
   .attribution{
     display: none;
+  }
+  .results-placeholder{
+    height: 257px;
   }
 }
